# synapse

./: .bandit  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_REPORT_FINAL.md  AUDIT_REPORT_FULL_v2.md  CHANGELOG.md  FIX_SPRINT_REPORT.md  LICENSE  MANIFEST.in  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE6_COMPLETION_REPORT.md  README.md  RELEASE_NOTES_v3.1.0.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  coverage_phase6_1.xml  phase6_1_replay_report.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/work_drafts/: AUDIT_FINAL_v3.1.md  FIX_SPRINT_3_WARNINGS.md  FIX_SPRINT_CRITICAL.md
.github/workflows/: docker.yml  release.yml  security-scan.yml  test.yml
config/: default.yaml
docker/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  prometheus.yml
docs/: API_REFERENCE.md  AUDIT_REPORT_v3.1.md  FIX_SPRINT_1_FINAL.md  FIX_SPRINT_2_FINAL.md  FIX_SPRINT_3_FINAL.md  FIX_SPRINT_4_FINAL.md  FIX_SPRINT_REPORT.md  INSTALLATION_GUIDE.md  PHASE1_COMPLETION_REPORT.md  PRODUCTION_RELEASE_REPORT.md  QUICKSTART.md  RELEASE_NOTES_v3.1.md  RELEASE_REPORT_v3.1.0.md  REPO_ORGANIZATION_REPORT.md  SECURITY_GUIDE.md  SPRINT_5_PHASE_1_REPORT.md  SPRINT_5_PHASE_2_REPORT.md  SPRINT_5_PHASE_3_REPORT.md  SPRINT_5_PHASE_4_REPORT.md  TDD.md  TDD_INSTRUCTION_v1_2_FINAL.md  TROUBLESHOOTING.md  agent_runtime_model.md  architecture_compliance_map.md  architecture_overview.md  capability_governance.md  deployment_architecture.md  determinism_verification.md  deterministic_execution_model.md  distributed_execution_model.md  phase1_2_secure_execution_pipeline.md  phase1_capability_security_layer.md  platform_scaling_strategy.md  production_baseline.md  production_readiness_report.md  replay_and_audit.md  roadmap.md  security_enforcement_matrix.md  security_model.md  spec_compliance_report.md
docs/admin/: deployment.md  monitoring.md  security-hardening.md
docs/architecture/: phase6_1_baseline.md
docs/developer/: api.md  plugins.md  skills.md  web_ui_tdd_plan.md
docs/integrations/: AGENT_ZERO_INTEGRATION.md  ANTHROPIC_PATTERNS_INTEGRATION.md  AUTOGPT_INTEGRATION.md  BROWSER_USE_INTEGRATION.md  CLAUDE_CODE_INTEGRATION.md  CODEX_INTEGRATION.md  LANGCHAIN_INTEGRATION.md  LANGGRAPH_INTEGRATION.md  LANGSMITH_SDK_INTEGRATION.md  OPENCLAW_INTEGRATION.md
docs/scaling/: phase7_readiness.md
docs/user/: configuration.md  installation.md  quickstart.md  security.md  troubleshooting.md
installer/linux/: synapse.desktop
installer/macos/: Info.plist  setup.py
installer/scripts/: build_linux.py  build_macos.py  build_windows.py
installer/windows/: synapse_installer.nsi
skills/: __init__.py
synapse/: __init__.py  main.py
synapse/agent_runtime/: agent_runtime.py  deterministic_planner.py  execution_quota.py  memory_vault.py
synapse/agents/: __init__.py  critic.py  developer.py  forecaster.py  goal_manager.py  governor.py  guardian.py  optimizer.py  planner.py
synapse/api/: __init__.py  app.py  middleware.py  storage.py  validators.py
synapse/audit/: __init__.py  tenant_audit_chain.py
synapse/capability/: __init__.py  domain_registry.py
synapse/cluster_orchestration/: __init__.py  cluster_scheduler.py  distributed_execution_domain.py  federated_audit_coordinator.py  orchestrator_runtime_bridge.py
synapse/config/: __init__.py
synapse/connectors/: __init__.py  runtime.py  security.py
synapse/control_plane/: __init__.py  cluster_manager.py  control.py  deterministic_scheduler.py  node_registry.py  orchestrator_mesh.py  tenant_quota_registry.py  tenant_scheduler.py  tenant_state_partition.py
synapse/core/: __init__.py  audit.py  binding.py  capability_scope.py  checkpoint.py  determinism.py  environment.py  exceptions.py  execution.py  execution_fabric.py  isolation_policy.py  models.py  node_runtime.py  observability.py  orchestrator.py  replay.py  rollback.py  security.py  time_sync_manager.py  workflow_engine.py
synapse/crypto/: capability_token.py
synapse/distributed/: node_protocol.py  node_runtime.py  replay_consistency.py
synapse/distributed_consensus/: node_identity.py  state_hash_consensus.py
synapse/ecosystem/: __init__.py  api_gateway.py  capability_marketplace.py  domain_packs.py
synapse/environment/: __init__.py  base.py  docker_env.py  local_os.py
synapse/governance/: __init__.py  capability_policy.py  capability_registry.py  issuance.py  revocation.py
synapse/integrations/: __init__.py  browser_controller.py  code_generator.py  human_loop.py  rag.py  (+2 more)
synapse/ui/gui/src-tauri/: Cargo.toml  tauri.conf.json
synapse/ui/gui/src-tauri/src/: commands.rs  main.rs  metrics.rs  security.rs  skills.rs  wizard.rs
synapse/ui/gui/src-tauri/src/__tests__/: commands_test.rs
tests/: conftest.py  test_autonomous_failures.py  test_autonomy_optimization.py  test_base_skill_direct.py  test_builtin_skills.py  test_capability_manager.py  test_capability_security_layer_v1.py  test_checkpoint_fixed.py  test_checkpoint_system.py  test_cluster_adaptive_execution.py  test_cluster_execution_e2e.py  test_cluster_manager.py  test_cluster_transport.py  test_cognitive_cycle.py  test_connector_runtime.py  test_consensus_engine.py  test_coordination_service.py  test_core_security.py  test_coverage_final.py  test_coverage_improvement.py  test_critic_agent.py  test_critical_modules.py  test_dashboard.py  test_deployment_profiles.py  test_deterministic_execution.py  test_developer_agent.py  test_distributed_memory.py  test_distributed_memory_store_full.py  test_distributed_node_runtime.py  test_distributed_node_runtime_comprehensive.py  test_distributed_node_runtime_full.py  test_distributed_policy_engine.py  test_docker_config.py  test_docker_env.py  test_docker_env_comprehensive.py  test_docker_env_full.py  test_dynamic_policy_update.py  test_dynamic_registry_comprehensive.py  test_dynamic_registry_full.py  test_dynamic_registry_load.py  (+63 more)
(+246 files in other folders)
